--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,26 @@
-# Server
+# Server Configuration
 NODE_ENV=development
 PORT=3000
 
-# MongoDB
+# MongoDB Connection
+# For local: mongodb://localhost:27017/docxpress
+# For Atlas: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<dbname>
 MONGODB_URI=mongodb://localhost:27017/docxpress
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-in-production-min-32-chars
 JWT_EXPIRES_IN=7d
 
 # File Storage
 STORAGE_ROOT=./uploads
 MAX_FILE_SIZE=52428800
 
-# FFmpeg path (if not in PATH)
+# FFmpeg path (optional - only if not in PATH)
 # FFMPEG_PATH=/usr/bin/ffmpeg
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# CORS (optional)
+# CORS_ORIGIN=http://localhost:3000
