--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,11 @@ coverage/
 .Spotlight-V100
 .Trashes
 ehthumbs.db
+
+# Flutter specific
+flutter_app/android/local.properties
+flutter_app/.flutter-plugins
+flutter_app/.flutter-plugins-dependencies
+flutter_app/.dart_tool/
+flutter_app/build/
+*.iml
