--- a/flutter_app/android/local.properties
+++ b/flutter_app/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=/home/ranesh/Android/Sdk
-flutter.sdk=/home/ranesh/development/flutter
+sdk.dir=C:\\Users\\SRIKA\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
