--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
+    "mammoth": "^1.11.0",
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5",
     "pptxgenjs": "^3.12.0",
     "sharp": "^0.33.3",
     "tesseract.js": "^5.0.5",
